working example of aws cognito login

--- a/oauth2callback.html
+++ b/oauth2callback.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <script src='config.js'></script>
-<script>System.import('lib/main')</script>
+<script>System.import('lib/callback')</script>
 <p>Hello world!</p>
 <button id="login-google">login google</button>
 </body>
