work in progress
* redux
* immutable
* react
* working basic image selector
* karma

--- a/oauth2callback.html
+++ b/oauth2callback.html
@@ -5,11 +5,10 @@
   <title>test</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <script src="jspm_packages/system.js"></script>
+  <link rel="stylesheet" href="dist/upload.css" />
 </head>
 <body>
 <script src='config.js'></script>
 <script>System.import('lib/callback')</script>
-<p>Hello world!</p>
-<button id="login-google">login google</button>
 </body>
 </html>
