--- a/test.html
+++ b/test.html
@@ -4,12 +4,13 @@
   <meta charset='utf-8'>
   <title>test</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel="stylesheet" href="dist/upload.css" />
   <script src="jspm_packages/system.js"></script>
 </head>
 <body>
 <script src='config.js'></script>
 <script>System.import('lib/main')</script>
-<p>Hello world!</p>
+<p>Hello wordld!</p>
 <button id="login-google">login google</button>
 </body>
 </html>
